# AutomaticSolver

./: 552.f  552.l  5521  5522  553.f  553.l  5531  5532  554.f  554.l  5541  5542  555.f  555.l  5551  5552  556.f  556.l  5561  5562  557.f  557.l  5571  5572  558.f  558.l  5581  5582  559.f  559.l  5591  5592  560.f  560.l  5601  5602  CMakeLists.txt  all.ff  all.ll  distr.txt  (+9 more)
pipeline/: .RData  .Rhistory  NonLinearOptimizator  Undistortion  create_points.sh  density.r  feature_detection.m  non_linear.sh  script.sh  undistort.py  undistort_from_file.py  undistort_one_parameter.py  undistorted_matching.m
pipeline/automatic_solver_results_A/: 552  552.f  552.l  552_alL_errs  552_left  552_recomp_F  552_right  552_undistorted_left  552_undistorted_right  553  553.f  553.l  553_alL_errs  553_left  553_recomp_F  553_right  553_undistorted_left  553_undistorted_right  554  554.f  554.l  554_alL_errs  554_left  554_recomp_F  554_right  554_undistorted_left  554_undistorted_right  555  555.f  555.l  555_alL_errs  555_left  555_recomp_F  555_right  555_undistorted_left  555_undistorted_right  556  556.f  556.l  556_alL_errs  (+46 more)
pipeline/automatic_solver_results_B/: 552  552.f  552.l  552_alL_errs  552_left  552_recomp_F  552_right  552_undistorted_left  552_undistorted_right  553  553.f  553.l  553_alL_errs  553_left  553_recomp_F  553_right  553_undistorted_left  553_undistorted_right  554  554.f  554.l  554_alL_errs  554_left  554_recomp_F  554_right  554_undistorted_left  554_undistorted_right  555  555.f  555.l  555_alL_errs  555_left  555_recomp_F  555_right  555_undistorted_left  555_undistorted_right  556  556.f  556.l  556_alL_errs  (+56 more)
pipeline/automatic_solver_results_C/: 552  552.f  552.l  552_alL_errs  552_left  552_recomp_F  552_right  552_undistorted_left  552_undistorted_right  553  553.f  553.l  553_alL_errs  553_left  553_recomp_F  553_right  553_undistorted_left  553_undistorted_right  554  554.f  554.l  554_alL_errs  554_left  554_recomp_F  554_right  554_undistorted_left  554_undistorted_right  555  555.f  555.l  555_alL_errs  555_left  555_recomp_F  555_right  555_undistorted_left  555_undistorted_right  556  556.f  556.l  556_alL_errs  (+46 more)
pipeline/automatic_solver_results_D/: 552  552.f  552.l  552_left  552_recomp_F  552_right  552_undistorted_left  552_undistorted_right  553  553.f  553.l  553_left  553_recomp_F  553_right  553_undistorted_left  553_undistorted_right  554  554.f  554.l  554_left  554_recomp_F  554_right  554_undistorted_left  554_undistorted_right  555  555.f  555.l  555_left  555_recomp_F  555_right  555_undistorted_left  555_undistorted_right  556  556.f  556.l  556_left  556_recomp_F  556_right  556_undistorted_left  556_undistorted_right  (+37 more)
pipeline/automatic_solver_results_T/: 552.f  552.l  552_all_errors  552_curve_left  552_curve_right  552_lambda  552_left  552_recomputed_F  552_right  552_summary  552_undistorted_left  552_undistorted_right  552_unscaled_undistorted_left  552_unscaled_undistorted_right  553.f  553.l  553_all_errors  553_curve_left  553_curve_right  553_lambda  553_left  553_recomputed_F  553_right  553_summary  553_undistorted_left  553_undistorted_right  553_unscaled_undistorted_left  553_unscaled_undistorted_right  554.f  554.l  554_all_errors  554_curve_left  554_curve_right  554_lambda  554_left  554_recomputed_F  554_right  554_summary  554_undistorted_left  554_undistorted_right  (+21 more)
pipeline/points_correspondence/: points_553_1  points_553_2  points_554_1  points_554_2  points_555_1  points_555_2  points_556_1  points_556_2  points_557_1  points_557_2  points_558_1  points_558_2  points_559_1  points_559_2  points_560_1  points_560_2
pipeline/points_correspondence/A/: points_552_left  points_552_right  points_553_left  points_553_right  points_554_left  points_554_right  points_555_left  points_555_right  points_556_left  points_556_right  points_557_left  points_557_right  points_558_left  points_558_right  points_559_left  (+3 more)
pipeline/scripts/: create_points.sh  create_points_D.sh  create_points_T.sh  non_linear.sh  non_linear_T.sh
subroutines/: CMakeLists.txt
subroutines/distortionEstimationGroebner/: CMakeLists.txt  main.cpp  main_distortion_estimator.cpp  solver_ku8pt.cpp  solver_ku8pt.h
subroutines/distortion_groebner_estimator/: CMakeLists.txt  main_distortion_estimator.cpp  solver_ku8pt.cpp  solver_ku8pt.h
subroutines/focal_length_estimator/: CMakeLists.txt  focal_length_solver.cpp  focal_length_solver.h  main_focal_length_estimator.cpp  testF.txt  testF2.txt
subroutines/nonLinearOptimization/: CMakeLists.txt  main_non_linear_optimizator.cpp
subroutines/non_linear_optimizer/: CMakeLists.txt  main_non_linear_optimizer.cpp
subroutines/tests/: CMakeLists.txt
subroutines/tests/test_groebner_solver/: CMakeLists.txt  simple_tests.cpp
subroutines/undistortion/: CMakeLists.txt  main.cpp
subroutines/utils/: CMakeLists.txt  undistortion_problem_utils.cpp  undistortion_problem_utils.h
(+65 files in other folders)
